2012-07-19  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Value.cpp: fix Value::read, it wasn't
	correctly reading the value type when packed with a list 
	header [thanks Miguel Sarabia del Castillo]

	* src/libYARP_OS/harness/ValueTest.cpp: add check for
	Value::read [thanks Miguel Sarabia del Castillo]

2012-07-19 Ugo Pattacini <ugo.pattacini@iit.it>
    * cartesian & gaze I/F's: exposed events-oriented to address swig issues.

2012-07-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_sig/src/Image.cpp: from Juxi Leitner, a fix for 
	GRAY images [thanks Juxi Leitner]

	* src/libYARP_OS/include/yarp/os/Run.h,
	src/libYARP_name/src/BootstrapServer.cpp,
	src/yarpserver/src/yarpserver3.cpp,
	src/libYARP_OS/include/yarp/os/impl/PlatformMap.h,
	src/libYARP_OS/include/yarp/os/impl/RunProcManager.h,
	src/libYARP_sig/src/Vector.cpp: from Anne van Rossum, some fixes 
	for YARP without ACE configuration [thanks Anne van Rossum]

2012-07-12  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: translate ResourceFinder::configure to
	use std::vector<std::string> (aka SVector in YARP's SWIG
	translation) [thanks Stephane Lallee]

2012-07-10  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: rename RFModule::attach(RpcServer&) out
	of harms way to attach_rpc_server [thanks Stephane Lallee]

2012-07-06  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/BayerCarrier.cpp
	(modifyIncomingData): fix reporting of errors on unreliable
	connections [thanks Vadim Tikhanoff] [thanks Lorenzo Natale]

	* src/idls/thrift/src/t_yarp_generator.cc (generate_service): 
	account for length of return types [thanks Elena Ceseracciu]

2012-07-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * setting version 2.3.19 to follow interface changes
	
2012-07-03 Ugo Pattacini <ugo.pattacini@iit.it>
    * gaze I/F's: added get/setSaccadesActivationAngle() methods.

2012-06-20 Lorenzo Natale <lorenzo.natale@iit.it>