@@ -1,0 +1,13 @@
+Sqlite3
+
+SQLite is an "in-process library that implements a self-contained, 
+serverless, zero-configuration, transactional SQL database engine."
+
+The author disclaims copyright to this source code.  In place of
+a legal notice, they give a blessing:
+
+    May you do good and not evil.
+    May you find forgiveness for yourself and forgive others.
+    May you share freely, never taking more than you give.
+
+Version: 3.6.15 amalgamation
