@@ -11,8 +11,9 @@ if (YARP_USE_PERSISTENT_NAMESERVER)
   if (YARP_USE_SYSTEM_SQLITE)
     set(SQLITE_SOURCE)
   else ()
-    set(SQLITE_SOURCE sqlite/sqlite3.c sqlite/sqlite3.h)
-    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sqlite)
+    set(SQLITE_SRC ${CMAKE_SOURCE_DIR}/extern/sqlite/sqlite)
+    set(SQLITE_SOURCE ${SQLITE_SRC}/sqlite3.c ${SQLITE_SRC}/sqlite3.h)
+    include_directories(${SQLITE_SRC})
   endif()
   include_directories(${ACE_INCLUDE_DIRS})
 
