@@ -1,3 +1,8 @@
+2012-07-20  Paul Fitzpatrick  <paul@robotrebuilt.com>
+
+	* extern/sqlite: move sqlite amalgamation to more standard
+	location, following Daniele's lead [thanks Daniele Domenichelli]
+
 2012-07-19  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
 	* src/libYARP_OS/src/Value.cpp: fix Value::read, it wasn't
